added debugger for importer

--- a/.devcontainer/importer/launch.json
+++ b/.devcontainer/importer/launch.json
@@ -94,6 +94,16 @@
             "env": {
                 "PYTHONPATH": "${workspaceFolder}/python"
             }
+        },
+        {
+            "name": "Attach to Python Functions dwys",
+            "type": "debugpy",
+            "request": "attach",
+            "connect": {
+                "host": "localhost",
+                "port": 9091
+            },
+            "preLaunchTask": "func: host start"
         }
     ]
 }
